<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Manga Proxy EX</string>
	<string name="genre">Genre</string>
	<string name="genre_all">All</string>
	<string name="menu_item_source">Source</string>
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_update">Update</string>
	<string name="menu_item_preferences">@string/ui_preference</string>
	<string name="menu_item_zoom">Zoom</string>
	<string name="menu_item_zoom_fit_width_or_height">Fit Width or Height</string>
	<string name="menu_item_zoom_fit_width_auto_split">Fit Width (Auto Split)</string>
	<string name="menu_item_zoom_fit_width">Fit Width</string>
	<string name="menu_item_zoom_fit_height">Fit Height</string>
	<string name="menu_item_zoom_fit_screen">Fit Screen</string>
	<string name="menu_item_orientation_user">Use System Setting</string>
	<string name="menu_item_orientation_portrait">Portrait</string>
	<string name="menu_item_orientation_landscape">Landscape</string>
	<string name="dialog_confirm_to_exit">Confirm to exit?</string>
	<string name="dialog_confirm_to_remove_favorite">Confirm to remove?</string>
	<string name="dialog_ok">@android:string/ok</string>
	<string name="dialog_cancel">@android:string/cancel</string>
	<string name="dialog_loading_title">Loading</string>
	<string name="dialog_loading_message">Loading, please wait…</string>
	<string name="dialog_loading_message_format">Loading %s…</string>
	<string name="dialog_download_title">@string/ui_download_data</string>
	<string name="dialog_download_message">Downloading, please wait…</string>
	<string name="dialog_download_message_format">Downloading %1$s…\nDownload: %2$s</string>
	<string name="dialog_process_title">@string/ui_process_data</string>
	<string name="dialog_process_message">Processing, please wait…</string>
	<string name="dialog_process_message_format">Processing %s…</string>
	<string name="dialog_loading_chapter_message_format">Loading chapter…              \nDownload: %s</string>
	<string name="dialog_loading_imgsvrs_message_format">Loading dynamic image servers…\nDownload: %s</string>
	<string name="dialog_unmounted_title">SD Card Unmounted</string>
	<string name="dialog_unmounted_message">We are unable to access your SD card.\nPlease ensure that you have mounted your Android\'s SD card.</string>
	<string name="dialog_unmounted_try_again">Try Again</string>
	<string name="dialog_unmounted_exit">Exit</string>
	<string name="source_of_genre_list">the list of Genre</string>
	<string name="source_of_search_list">the list of Search</string>
	<string name="source_of_manga_list">the list of Manga</string>
	<string name="source_of_chapter_list">the list of Chapter</string>
	<string name="source_of_chapter">the data of Chapter</string>
	<string name="ui_search">Search</string>
	<string name="ui_preference">Preferences</string>
	<string name="ui_preference_general">General</string>
	<string name="ui_preference_favorite_auto_update">Favorite Auto-update</string>
	<string name="ui_preference_favorite_auto_update_summary">Automagically updates favorites when open.</string>
	<string name="ui_preference_right_to_left_reading">Right-to-Left Reading</string>
	<string name="ui_preference_right_to_left_reading_summary">Read peags using Right-to-Left direction.</string>
	<string name="ui_preference_page_orientation">Screen Orientation</string>
	<string name="ui_preference_page_orientation_summary">Sets the screen orientation while reading pages.</string>
	<string name="ui_preference_page_zoom_mode">Pages Zoom Mode</string>
	<string name="ui_preference_page_zoom_mode_summary">Sets the default method while reading pages.</string>
	<string name="ui_preference_preload_pages">Preload Pages</string>
	<string name="ui_preference_preload_pages_summary">Sets the pages to preload while reading.</string>
	<string name="ui_no_items">No items.</string>
	<string name="ui_no_favorite_items">No favorite items.\nPress MENU to add a new item.</string>
	<string name="ui_no_pages">No pages.</string>
	<string name="ui_error_no_network">No available wireless or network.\nPlease check your settings,\nand try again later.</string>
	<string name="ui_error_on_download">Cannot download data from %s.\nPlease try again later.</string>
	<string name="ui_error_on_process">Cannot process data of %s.\nPlease try again later,\nor update the app if necessary.</string>
	<string name="ui_error_on_imgsvr_url">Cannot get URL for Image Servers.\nPlease try again later,\nor update the app if necessary.</string>
	<string name="ui_error_on_imgsvr_download">Cannot download Image Servers.\nPlease try again later.</string>
	<string name="ui_error_on_imgsvr_process">Cannot process Image Servers.\nPlease try again later,\nor update the app if necessary.</string>
	<string name="ui_error_on_page_download">Cannot download Page %1$d from %2$s.\nPlease try again later.</string>
	<string name="ui_error_out_of_memory">Out of Memory.\nPlease restart the application.</string>
	<string name="ui_error_invalid_image">Connot decode image.</string>
	<string name="ui_chapter_count">Chapters: %s</string>
	<string name="ui_author">Author: %s</string>
	<string name="ui_last_update">Update: %tF</string>
	<string name="ui_last_update_countdown">Update: %s</string>
	<string name="ui_recommend">Recommend: %s</string>
	<string name="ui_rating">Rating: %s</string>
	<string name="ui_completed">Completed</string>
	<string name="ui_is_volume">Volume</string>
	<string name="ui_search_hint">Search</string>
	<string name="ui_load_next_page">Load next Page</string>
	<string name="ui_download_data">Download Data</string>
	<string name="ui_process_data">Process Data</string>
	<string name="ui_download_page">Download: %.1fK</string>
	<string name="ui_process_page">Process Page</string>
	<string name="ui_error">Error</string>
	<string name="ui_click_to_cancel">Tap to Cancel</string>
	<string name="ui_please_wait">Please wait</string>
	<string name="ui_fail_to_download">Fail to downlod Page %d</string>
	<string name="ui_fail_to_process">Fail to process Page %d</string>
	<string name="ui_pages">Page - / -</string>
	<string name="ui_pages_format">Page %1$d / %2$d</string>
	<string name="ui_goto_pages_format">Goto Page %1$d / %2$d</string>
	<string name="ui_downloading_page">Downloading Page %d …</string>
	<string name="ui_downloading_page_retry">Retry to download Page %1$d (%2$d times) …</string>
	<string name="ui_updating_manga">Updating \"%s\" …</string>
	<string name="ui_updated_manga">%1$d / %2$d</string>
	<string name="ui_update_manga_completed">Update completed.</string>
	<string name="ui_has_new_version_format">There is a new version of %1$s %2$s.</string>
	<string name="ui_btn_update_app">Download new version from Google Code</string>
	<string name="popup_loaded_page">Loaded Page %d of current Genre.</string>
	<string name="popup_cache_save_allmanga">Cached the source of all manga.</string>
	<string name="popup_cache_load_allmanga">Loaded the source of all manga from cache.</string>
	<string name="popup_fail_to_cache_page">Fail to cache Page %d.</string>
	<string name="popup_fail_to_download_page">Fail to download Page %d.</string>
	<string name="popup_out_of_memory">@string/ui_error_out_of_memory</string>
	<string name="popup_write_crash_log">Write crash log to SDCard.</string>
	<string name="datetime_countdown_seconts">in 1min</string>
	<string name="datetime_countdown_minutes">%dm ago</string>
	<string name="datetime_countdown_hours">%dh ago</string>
	<string name="datetime_countdown_1day">yesterday</string>
	<string name="datetime_countdown_2day">2days ago</string>
	<string name="datetime_countdown_days">%1$02d-%2$02d</string>
	<string name="img_desc_border">Layout border</string>
</resources>
